--- a/src/components/Editor/extensions/custom-block/components/CustomBlock/index.module.less
+++ b/src/components/Editor/extensions/custom-block/components/CustomBlock/index.module.less
@@ -1,11 +1,12 @@
 .container {
   cursor: pointer;
   position: relative;
+
   .empty {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 60px;
+    height: 3.75em;
     cursor: pointer;
   }
 }
