--- a/src/components/Editor/extensions/highlight-block/components/HighlightBlock/index.module.less
+++ b/src/components/Editor/extensions/highlight-block/components/HighlightBlock/index.module.less
@@ -1,16 +1,20 @@
 .container {
   position: relative;
+
   .selectColorContainer {
     position: absolute;
-    top: -36px;
+    top: -2.25em;
     left: 50%;
     transform: translateX(-50%);
   }
+
   .highlightBlock {
     &.dragging {
       opacity: 0.5;
     }
+
     @import "@/components/Editor/extensions/drop-common.less";
   }
+
   @import "@/components/Editor/extensions/drag-common.less";
 }
