--- a/src/components/Editor/extensions/html-block/components/HTMLBlock/index.module.less
+++ b/src/components/Editor/extensions/html-block/components/HTMLBlock/index.module.less
@@ -1,13 +1,14 @@
 .container {
   cursor: pointer;
   height: auto;
-  margin: 16px auto 0;
+  margin: var(--block-distance) auto 0;
+
   .empty {
     color: #ccc;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 60px;
+    height: 3.75em;
     cursor: pointer;
     user-select: none;
   }
