--- a/src/components/Editor/extensions/image-gallary/components/HorizontalImageGallery/index.module.less
+++ b/src/components/Editor/extensions/image-gallary/components/HorizontalImageGallery/index.module.less
@@ -1,10 +1,12 @@
 .verticalGalleryContainer {
   display: flex;
-  gap: 10px;
+  gap: 0.625em;
   flex-wrap: wrap;
   font-size: 0;
+
   .item {
     flex-grow: 1;
+
     img {
       width: 100%;
       object-fit: cover;
