--- a/src/components/Editor/extensions/image-gallary/components/VerticalImageGallery/index.module.less
+++ b/src/components/Editor/extensions/image-gallary/components/VerticalImageGallery/index.module.less
@@ -1,10 +1,12 @@
 .gridContainer {
-  column-gap: 10px;
-  row-gap: 10px;
+  column-gap: 0.625em;
+  row-gap: 0.625em;
+
   .gridItem {
     width: 100%;
     height: auto;
     cursor: pointer;
+
     img {
       width: 100%;
       object-fit: cover;
