--- a/src/components/Editor/extensions/paragraph/components/ColorSelect/index.module.less
+++ b/src/components/Editor/extensions/paragraph/components/ColorSelect/index.module.less
@@ -1,20 +1,22 @@
 .colorSelectContainer {
   position: absolute;
   background-color: var(--primary-bg-color);
-  right: -100px;
-  top: 45px;
+  right: -12.5em;
+  top: 2.8125em;
   display: flex;
-  gap: 8px;
-  padding: 8px;
+  gap: 0.5em;
+  padding: 0.5em;
   box-shadow: var(--box-shadow1);
-  border-radius: 8px;
+  border-radius: 0.5em;
+
   .item {
-    width: 32px;
-    height: 32px;
-    border-radius: 4px;
+    width: 2em;
+    height: 2em;
+    border-radius: 0.25em;
     cursor: pointer;
-    line-height: 32px;
+    line-height: 2em;
     text-align: center;
+
     &:hover {
       background-color: var(--common-hover-bg);
     }
