--- a/src/components/Editor/extensions/paragraph/components/ColorText/index.module.less
+++ b/src/components/Editor/extensions/paragraph/components/ColorText/index.module.less
@@ -2,11 +2,12 @@
 
 .textContainer {
   composes: item;
-  width: 56px;
+  width: 3.5em;
+
   .text {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 6px;
+    gap: 0.375em;
   }
 }
