--- a/src/components/Editor/extensions/styled-text/components/StyledText/index.module.less
+++ b/src/components/Editor/extensions/styled-text/components/StyledText/index.module.less
@@ -1,6 +1,6 @@
 .styledText {
-  padding: 4px;
-  border-radius: 4px;
-  margin: 0 2px;
+  padding: 0.25em;
+  border-radius: 0.25em;
+  margin: 0 0.125em;
   font-weight: bold;
 }
