--- a/src/components/Editor/extensions/tabs/components/Tabs/index.module.less
+++ b/src/components/Editor/extensions/tabs/components/Tabs/index.module.less
@@ -1,13 +1,16 @@
 .dropContainer {
   position: relative;
+
   .tabsContainer {
-    border-radius: 12px;
+    border-radius: 0.75em;
     border: 1px solid var(--line-color);
-    padding: 16px 16px 0;
+    padding: 0.5em 1em;
+
     .content {
-      padding: 20px 20px 0;
+      padding: 1.25em 1.25em 0;
     }
   }
+
   @import "@/components/Editor/extensions/drag-common.less";
   @import "@/components/Editor/extensions/drop-common.less";
 }
