--- a/src/components/Editor/extensions/whiteboard/components/Whiteboard/index.module.less
+++ b/src/components/Editor/extensions/whiteboard/components/Whiteboard/index.module.less
@@ -2,19 +2,19 @@
   position: relative;
   width: 100%;
   background-color: #f5f5f5;
-  border-radius: 8px;
-  margin: 10px 0;
+  border-radius: 0.5em;
+  margin: 0.625em 0;
   overflow: hidden;
 }
 
 .fullscreenButton {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 0.625em;
+  right: 0.625em;
   z-index: 10;
   background-color: rgba(255, 255, 255, 0.8);
-  border-radius: 4px;
-  padding: 4px;
+  border-radius: 0.25em;
+  padding: 0.25em;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -43,18 +43,18 @@
   width: 90%;
   height: 90%;
   background-color: #f5f5f5;
-  border-radius: 8px;
+  border-radius: 0.5em;
   position: relative;
 }
 
 .closeButton {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 0.625em;
+  right: 0.625em;
   z-index: 10;
   background-color: rgba(255, 255, 255, 0.8);
-  border-radius: 4px;
-  padding: 4px;
+  border-radius: 0.25em;
+  padding: 0.25em;
   cursor: pointer;
   display: flex;
   align-items: center;
