--- a/src/editor-extensions/card-link/components/CardContent/index.module.less
+++ b/src/editor-extensions/card-link/components/CardContent/index.module.less
@@ -1,8 +1,9 @@
 .cardContentContainer {
-  border: 24px solid transparent;
+  border: 1.5em solid transparent;
   overflow-y: auto;
-  max-height: 300px;
-  max-width: 400px;
+  max-height: 18.75em;
+  max-width: 25em;
+
   &::-webkit-scrollbar {
     display: none;
   }
