--- a/src/editor-extensions/card-link/components/CardLink/index.module.less
+++ b/src/editor-extensions/card-link/components/CardLink/index.module.less
@@ -1,5 +1,5 @@
 .cardLinkContainer {
   cursor: pointer;
   color: var(--active-text-color);
-  border-bottom: 3px double rgb(42, 157, 143);
+  border-bottom: 0.1875em double rgb(42, 157, 143);
 }
