--- a/src/editor-extensions/daily-summary/components/DailySummary/index.module.less
+++ b/src/editor-extensions/daily-summary/components/DailySummary/index.module.less
@@ -4,24 +4,24 @@
   @import "@/components/Editor/extensions/drag-common.less";
 
   .listContainer {
-    padding: 16px;
+    padding: 1em;
     border: 1px solid var(--line-color);
-    border-radius: 12px;
+    border-radius: 0.75em;
   }
 
   .info {
-    margin-bottom: 16px;
+    margin-bottom: 1em;
   }
 
   .cardList {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    gap: 16px;
+    grid-template-columns: repeat(auto-fill, minmax(9.25em, 1fr));
+    gap: 1em;
   }
 
   .articleList {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 16px;
+    grid-template-columns: repeat(auto-fill, minmax(18.75em, 1fr));
+    gap: 1em;
   }
 }
