--- a/src/editor-extensions/document-card-list/components/DocumentList/index.module.less
+++ b/src/editor-extensions/document-card-list/components/DocumentList/index.module.less
@@ -1,5 +1,5 @@
 .list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  gap: 16px;
+  grid-template-columns: repeat(auto-fill, minmax(18.75em, 1fr));
+  gap: 1em;
 }
