--- a/src/components/Editor/extensions/blockquote/components/Blockquote/index.module.less
+++ b/src/components/Editor/extensions/blockquote/components/Blockquote/index.module.less
@@ -1,20 +1,25 @@
 .container {
   position: relative;
+
   .blockquote {
     margin: 0;
     background-color: rgba(0, 0, 0, 0.05);
-    border-left: 3px solid rgba(0, 0, 0, 0.4);
-    padding: 16px;
+    border-left: 0.25em solid rgba(0, 0, 0, 0.4);
+    padding: 1em;
     color: #454a52;
+
     & > [class*="container"]:last-child > p {
       margin-bottom: 0;
     }
+
     &.dark {
       background-color: rgba(255, 255, 255, 0.05);
-      border-left: 3px solid rgba(255, 255, 255, 0.4);
+      border-left: 0.25em solid rgba(255, 255, 255, 0.4);
       color: #abb3be;
     }
+
     @import "@/components/Editor/extensions/drop-common.less";
   }
+
   @import "@/components/Editor/extensions/drag-common.less";
 }
