--- a/src/components/Editor/extensions/check-list/components/CheckListItem/index.module.less
+++ b/src/components/Editor/extensions/check-list/components/CheckListItem/index.module.less
@@ -1,9 +1,10 @@
 .item {
   display: flex;
-  gap: 4px;
+  gap: 0.25em;
   align-items: flex-start;
   line-height: 1.8;
+
   .checkbox {
-    transform: translateY(3.5px);
+    transform: translateY(0.2075em);
   }
 }
