--- a/src/components/Editor/extensions/header/components/Header/index.module.less
+++ b/src/components/Editor/extensions/header/components/Header/index.module.less
@@ -1,5 +1,6 @@
 .container {
   position: relative;
+
   .h1,
   .h2,
   .h3,
@@ -17,86 +18,95 @@
   }
 
   .h1 {
-    font-size: 32px;
+    font-size: 2em;
     line-height: 1.3;
-    //border-bottom: solid 3px rgba(128, 30, 255, 1);
+    border-bottom: solid 3px rgba(128, 30, 255, 1);
   }
 
   .h2 {
-    font-size: 28px;
-    //border-radius: 14px;
+    font-size: 1.75em;
+    border-radius: 14px;
   }
-  //.h2::before {
-  //  content: "H2";
-  //  border-radius: .3em;
-  //  font-size: .8em;
-  //  padding: 4px 7px;
-  //  margin-right: .5em;
-  //  background-color: rgba(128, 30, 255, 1);
-  //  color: white;
-  //}
+
+  .h2::before {
+    content: "H2";
+    border-radius: 0.3em;
+    font-size: 0.8em;
+    padding: 0.25em 0.375em;
+    margin-right: 0.5em;
+    background-color: rgba(128, 30, 255, 1);
+    color: white;
+  }
 
   .h3 {
-    font-size: 24px;
-    //border-radius: 10px;
+    font-size: 1.5em;
+    border-radius: 10px;
   }
-  //.h3::before {
-  //  content: "H3";
-  //  color: white;
-  //  font-size: 0.8em;
-  //  background-color: rgba(128, 30, 255, 1);
-  //  border-radius: .3em;
-  //  margin-right: 12px;
-  //  padding: 4px 7px;
-  //}
+
+  .h3::before {
+    content: "H3";
+    color: white;
+    font-size: 0.8em;
+    background-color: rgba(128, 30, 255, 1);
+    border-radius: 0.3em;
+    margin-right: 12px;
+    padding: 4px 7px;
+  }
 
   .h4 {
-    font-size: 20px;
-    //border-radius: .3em;
+    font-size: 1.25em;
+    border-radius: 0.3em;
   }
 
-  //.h4::before {
-  //  content: "H4";
-  //  color: white;
-  //  font-size: 0.8em;
-  //  background-color: rgba(128, 30, 255, 1);
-  //  border-radius: .3em;
-  //  margin-right: 12px;
-  //  padding: 4px 7px;
-  //}
+  .h4::before {
+    content: "H4";
+    color: white;
+    font-size: 0.8em;
+    background-color: rgba(128, 30, 255, 1);
+    border-radius: 0.3em;
+    margin-right: 12px;
+    padding: 4px 7px;
+  }
 
   .h5 {
-    font-size: 18px;
+    font-size: 1.125em;
   }
 
   .h6 {
-    font-size: 16px;
+    font-size: 1em;
   }
+
   @import "@/components/Editor/extensions/drop-common.less";
+
   &.drop {
     &.before {
       &::before {
-        top: -4px;
+        top: -0.25em;
       }
     }
+
     &.after {
       &::after {
-        bottom: -2px;
+        bottom: -0.125em;
       }
     }
   }
+
   @import "@/components/Editor/extensions/drag-common.less";
 
   .h1 + .dragHandler {
-    top: 6px;
+    top: 0.375em;
   }
+
   .h2 + .dragHandler {
-    top: 6px;
+    top: 0.375em;
   }
+
   .h3 + .dragHandler {
-    top: 4px;
+    top: 0.375em;
   }
+
   .h4 + .dragHandler {
-    top: 1px;
+    top: 0.375em;
   }
 }
