--- a/src/components/Editor/extensions/hovering-item-common.less
+++ b/src/components/Editor/extensions/hovering-item-common.less
@@ -1,15 +1,17 @@
 .item {
   position: relative;
-  width: 40px;
-  height: 40px;
+  width: 2.5em;
+  height: 2.5em;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 8px;
+  border-radius: 0.5em;
   cursor: pointer;
+
   &:hover {
     background: var(--common-hover-bg);
   }
+
   &.active {
     background: rgb(203 213 224 / 0.4);
   }
