--- a/src/components/Editor/extensions/image-gallary/components/ImageGallerySetting/ImageItem/index.module.less
+++ b/src/components/Editor/extensions/image-gallary/components/ImageGallerySetting/ImageItem/index.module.less
@@ -1,34 +1,39 @@
 .container {
   flex: none;
-  width: 100px;
-  height: 100px;
+  width: 6.25em;
+  height: 6.25em;
   box-sizing: border-box;
-  border: 2px solid transparent;
+  border: 0.125em solid transparent;
   position: relative;
   cursor: pointer;
-  border-radius: 12px;
+  border-radius: 0.75em;
   overflow: hidden;
+
   &.dragging {
-    border: 2px dashed #dbf3da;
+    border: 0.125em dashed #dbf3da;
   }
+
   &.drop {
-    border: 2px dashed #dbf3da;
+    border: 0.125em dashed #dbf3da;
   }
+
   .img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 8px;
+    border-radius: 0.5em;
   }
+
   &:hover {
-    border: 2px solid #dbf3da;
+    border: 0.125em solid #dbf3da;
   }
+
   .delete {
     position: absolute;
     top: 0;
     right: 0;
-    width: 20px;
-    height: 20px;
+    width: 1.25em;
+    height: 1.25em;
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -38,6 +43,7 @@
     transition: opacity 0.2s;
     background-color: var(--primary-bg-color);
     color: white;
+
     &:hover {
       opacity: 1;
       background-color: var(--common-hover-bg);
