--- a/src/components/Editor/extensions/image-gallary/components/ImageGallerySetting/index.module.less
+++ b/src/components/Editor/extensions/image-gallary/components/ImageGallerySetting/index.module.less
@@ -1,46 +1,52 @@
 .settingContainer {
   display: flex;
   flex-direction: column;
-  gap: 16px;
-  padding: 20px;
+  gap: 1em;
+  padding: 1em;
+
   .subContainer {
     display: flex;
-    gap: 10px;
+    gap: 0.625em;
     flex-direction: column;
   }
+
   .title {
-    font-size: 16px;
+    font-size: 1em;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 0.625em;
   }
+
   .imageListContainer {
     display: flex;
     flex-wrap: nowrap;
-    gap: 20px;
+    gap: 1.25em;
+
     .uploadImage {
       flex: none;
-      width: 120px;
-      height: 120px;
+      width: 6.25em;
+      height: 6.25em;
       display: flex;
       justify-content: center;
       align-items: center;
+
       .content {
         display: flex;
-        width: 100px;
-        height: 100px;
+        width: 6.25em;
+        height: 6.25em;
         justify-content: center;
         align-items: center;
-        border: 1px dashed gray;
+        border: 0.0625em dashed gray;
         cursor: pointer;
-        border-radius: 12px;
+        border-radius: 0.75em;
       }
     }
+
     .imageList {
       flex: auto;
       overflow-x: auto;
       display: flex;
-      gap: 10px;
-      height: 120px;
+      gap: 0.625em;
+      height: 6.25em;
       align-items: center;
     }
   }
