--- a/src/components/Editor/extensions/image/components/Image/index.module.less
+++ b/src/components/Editor/extensions/image/components/Image/index.module.less
@@ -62,8 +62,8 @@
 }
 
 .item {
-  width: 28px;
-  height: 28px;
+  width: 2em;
+  height: 2em;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -71,9 +71,9 @@
 }
 
 .divider {
-  width: 1px;
-  height: 18px;
-  margin: auto 4px;
+  width: 0.0625em;
+  height: 1.1em;
+  margin: auto 0.25em;
   background-color: white;
   background-color: rgba(255, 255, 255, 0.1);
 }
