--- a/src/components/Editor/extensions/math/components/BlockMath/index.module.less
+++ b/src/components/Editor/extensions/math/components/BlockMath/index.module.less
@@ -2,14 +2,15 @@
   cursor: pointer;
 
   :global(div mjx-container[jax="CHTML"][display="true"]) {
-    margin: 4px auto;
+    margin: 0.25em auto;
   }
+
   .empty {
     color: #ccc;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 60px;
+    height: 3.75em;
     cursor: pointer;
     user-select: none;
   }
