--- a/src/components/Editor/extensions/mermaid/components/MermaidChart/index.module.less
+++ b/src/components/Editor/extensions/mermaid/components/MermaidChart/index.module.less
@@ -1,15 +1,17 @@
 .mermaid {
-  margin-top: 10px;
+  margin-top: 0.625em;
   cursor: pointer;
+
   .empty {
     color: #ccc;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 60px;
+    height: 3.75em;
     cursor: pointer;
     user-select: none;
   }
+
   svg {
     font-family: var(--font, '"Merroweather", "楷体", "楷体-简"') !important;
   }
