--- a/src/components/Editor/extensions/numbered-list/components/NumberedList/index.module.less
+++ b/src/components/Editor/extensions/numbered-list/components/NumberedList/index.module.less
@@ -1,7 +1,8 @@
 .list {
   margin: 0;
-  padding-inline-start: 40px;
+  padding-inline-start: 2.5em;
   counter-reset: item;
+
   li:last-child *:last-of-type([data-slate-node="element"]) {
     margin: 0;
   }
@@ -10,6 +11,7 @@
     position: relative;
     list-style-type: none;
     counter-increment: item;
+
     &::before {
       position: absolute;
       content: counter(item) ".";
