--- a/src/components/Editor/extensions/paragraph/components/HighlightSelect/index.module.less
+++ b/src/components/Editor/extensions/paragraph/components/HighlightSelect/index.module.less
@@ -3,18 +3,19 @@
   position: absolute;
   background-color: var(--primary-bg-color);
   box-shadow: var(--box-shadow1);
-  padding: 10px;
-  top: 40px;
+  padding: 0.625em;
+  top: 2.5em;
   left: 0;
   align-items: center;
-  gap: 10px;
-  border-radius: 8px;
+  gap: 0.625em;
+  border-radius: 0.5em;
+
   .item {
-    width: 30px;
-    height: 30px;
-    border-radius: 4px;
+    width: 1.875em;
+    height: 1.875em;
+    border-radius: 0.25em;
     cursor: pointer;
-    line-height: 40px;
+    line-height: 2.5em;
     text-align: center;
     border: 1px solid var(--line-color);
   }
