--- a/src/components/Editor/extensions/table/components/Table/ActionItem/index.module.less
+++ b/src/components/Editor/extensions/table/components/Table/ActionItem/index.module.less
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 4px;
-  height: 30px;
-  line-height: 30px;
+  gap: 0.25em;
+  height: 1.875em;
+  line-height: 1.875em;
 }
