--- a/src/components/Editor/extensions/tabs/components/TabTitle/index.module.less
+++ b/src/components/Editor/extensions/tabs/components/TabTitle/index.module.less
@@ -2,27 +2,30 @@
   flex: none;
   position: relative;
   display: flex;
-  padding: 0 8px;
+  padding: 0 0.5em;
   justify-content: center;
   align-items: center;
-  height: 40px;
+  height: 2.5em;
   box-sizing: border-box;
+
   .content {
     display: flex;
     align-items: center;
-    gap: 8px;
+    gap: 0.5em;
+
     .deleteIcon {
       display: flex;
       align-items: center;
       cursor: pointer;
     }
   }
+
   .bottomLine {
     position: absolute;
-    bottom: -1px;
+    bottom: -0.0625em;
     left: 0;
     width: 100%;
-    height: 2px;
+    height: 0.125em;
     background-color: var(--bottom-line-bg);
   }
 }
