--- a/src/components/Editor/extensions/tabs/components/TabsHeader/index.module.less
+++ b/src/components/Editor/extensions/tabs/components/TabsHeader/index.module.less
@@ -5,8 +5,8 @@
 
   .addTabBtn {
     flex: none;
-    height: 40px;
-    padding: 0 12px;
+    height: 2.5em;
+    padding: 0 0.75em;
     box-sizing: border-box;
     display: flex;
     align-items: center;
