--- a/src/components/Editor/extensions/tikz/components/Tikz/index.module.less
+++ b/src/components/Editor/extensions/tikz/components/Tikz/index.module.less
@@ -1,11 +1,12 @@
 .tikz {
   cursor: pointer;
+
   .empty {
     color: #ccc;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 60px;
+    height: 3.75em;
     cursor: pointer;
     user-select: none;
   }
