--- a/src/editor-extensions/components/ItemCard/index.module.less
+++ b/src/editor-extensions/components/ItemCard/index.module.less
@@ -1,10 +1,10 @@
 .card {
-  padding: 32px;
+  padding: 2em;
   display: flex;
-  gap: 16px;
+  gap: 1em;
   flex-direction: column;
   box-shadow: 0 1.5px 3px 0 rgb(0 0 0 / 15%);
-  border-radius: 16px;
+  border-radius: 1em;
   transition: all 0.2s ease;
   cursor: pointer;
   background-image: linear-gradient(
@@ -12,27 +12,32 @@
     rgba(125, 26, 189, 0.1),
     transparent 50%
   );
+
   &:hover {
     box-shadow: 0 3px 6px 0 rgb(0 0 0 / 15%);
+
     .title {
       color: #7d1abd;
     }
   }
+
   &.dark {
     background-color: #18151f;
     box-shadow: 0 4px 21px -12px rgba(0, 0, 0, 0.66);
   }
+
   .title {
     font-weight: bold;
-    font-size: 30px;
+    font-size: 1.875em;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
   }
+
   .desc {
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    padding-left: 5px;
+    padding-left: 0.3125em;
   }
 }
