--- a/src/editor-extensions/file-attachment/components/FileAttachment/index.module.less
+++ b/src/editor-extensions/file-attachment/components/FileAttachment/index.module.less
@@ -2,24 +2,28 @@
   position: relative;
   @import "@/components/Editor/extensions/drop-common.less";
   @import "@/components/Editor/extensions/drag-common.less";
+
   .fileAttachmentContainer {
     cursor: pointer;
     border: 1px solid var(--line-color);
-    padding: 12px 16px;
+    padding: 0.75em 1em;
     background-color: var(--card-bg-color);
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 0.5em;
+
     &:hover {
       background-color: var(--common-hover-bg);
     }
+
     .fileName {
-      font-size: 16px;
+      font-size: 1em;
       font-weight: 500;
       color: var(--text-color);
     }
+
     .filePath {
-      font-size: 12px;
+      font-size: 0.75em;
       text-overflow: ellipsis;
       overflow: hidden;
       white-space: nowrap;
