--- a/src/components/Editor/extensions/numbered-list/components/NumberedList/index.module.less
+++ b/src/components/Editor/extensions/numbered-list/components/NumberedList/index.module.less
@@ -2,6 +2,7 @@
   margin: 0;
   padding-inline-start: 2.5em;
   counter-reset: item;
+  --list-item-line-color: rgba(55, 53, 47, 0.16);
 
   li:last-child *:last-of-type([data-slate-node="element"]) {
     margin: 0;
