--- a/src/components/PresentationMode/index.module.less
+++ b/src/components/PresentationMode/index.module.less
@@ -61,7 +61,7 @@
   }
 
   .presentationFooter {
-    position: absolute;
+    position: fixed;
     bottom: 20px;
     font-size: 18px;
     color: var(--text-normal);
