--- a/src/components/Editor/extensions/bulleted-list/components/BulletedList/index.module.less
+++ b/src/components/Editor/extensions/bulleted-list/components/BulletedList/index.module.less
@@ -1,6 +1,7 @@
 .list {
   padding-inline-start: 2.5em;
   margin: 0;
+  --list-item-line-color: rgba(55, 53, 47, 0.16);
 
   li:last-child *:last-of-type([data-slate-node="element"]) {
     margin: 0;
