feat: 添加帮助模态框hook，优化演示模式下帮助提示的显示逻辑，并更新相关组件以支持新功能

--- a/src/layouts/ShortSidebarLayout/components/CardView/CardItem/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/CardView/CardItem/index.module.less
@@ -5,6 +5,10 @@
   content-visibility: auto;
   position: relative;
 
+  &:hover {
+    cursor: pointer;
+  }
+
   .time {
     margin-bottom: 20px;
     display: flex;
