feat: 添加白板演示模式

--- a/src/components/WhiteBoard/components/GridSettings/index.module.less
+++ b/src/components/WhiteBoard/components/GridSettings/index.module.less
@@ -8,9 +8,9 @@
   cursor: pointer;
   transition: all 0.2s;
 
-  &:hover {
-    background-color: var(--item-common-hover-bg, rgba(0, 0, 0, 0.05));
-  }
+  // &:hover {
+  //   background-color: var(--item-common-hover-bg, rgba(0, 0, 0, 0.05));
+  // }
 }
 
 .gridSettingsContent {
