--- a/src/components/Editor/extensions/bulleted-list/components/BulletedList/index.module.less
+++ b/src/components/Editor/extensions/bulleted-list/components/BulletedList/index.module.less
@@ -7,6 +7,12 @@
     margin: 0;
   }
 
+  --bullet-list-item-bg: hsl(168, 10%, 45%);
+
+  &.dark {
+    --bullet-list-item-bg: hsl(168, 10%, 95%);
+  }
+
   & > li {
     position: relative;
     list-style-type: none;
