--- a/src/components/Editor/extensions/list-item/components/ListItem/index.module.less
+++ b/src/components/Editor/extensions/list-item/components/ListItem/index.module.less
@@ -23,7 +23,7 @@
       position: absolute;
       left: -0.85em;
       top: var(--first-line-height, 1.5em); // 使用CSS变量，从第一行底部开始
-      bottom: 0;
+      bottom: 0.5em;
       width: 0.08em;
       background-color: var(--list-item-line-color, #ddd);
     }
