feat: 修改版本单位为 em，适配演示模式

--- a/src/components/Editor/extensions/list-item/components/ListItem/index.module.less
+++ b/src/components/Editor/extensions/list-item/components/ListItem/index.module.less
@@ -48,13 +48,13 @@
     .arrow {
       width: 0;
       height: 0;
-      border: 5px solid transparent;
+      border: 0.3125em solid transparent;
       border-top-color: #666;
       display: none;
-      transform: translateY(-2.5px);
+      transform: translateY(-0.15625em);
 
       &.fold {
-        transform: translateY(-5px) rotate(-90deg);
+        transform: translateY(-0.3125em) rotate(-90deg);
       }
     }
   }
