--- a/src/components/WhiteBoard/components/AttributeSetter/ArrowSetter/index.module.less
+++ b/src/components/WhiteBoard/components/AttributeSetter/ArrowSetter/index.module.less
@@ -8,16 +8,16 @@
   display: grid;
   width: fit-content;
   box-sizing: border-box;
-  gap: 12px;
-  grid-template-columns: repeat(3, 30px);
+  gap: 0.75em;
+  grid-template-columns: repeat(3, 1.5em);
   grid-template-rows: auto;
 
   .item {
-    padding: 4px;
-    width: 24px;
-    height: 24px;
+    padding: 0.25em;
+    width: 1.5em;
+    height: 1.5em;
     cursor: pointer;
-    border-radius: 4px;
+    border-radius: 0.25em;
 
     &.active {
       color: rgb(102, 152, 255);
@@ -35,16 +35,16 @@
   display: grid;
   width: fit-content;
   box-sizing: border-box;
-  gap: 12px;
-  grid-template-columns: repeat(4, 30px);
+  gap: 0.75em;
+  grid-template-columns: repeat(4, 1.5em);
   grid-template-rows: auto;
 
   .item {
-    padding: 4px;
-    width: 24px;
-    height: 24px;
+    padding: 0.25em;
+    width: 1.5em;
+    height: 1.5em;
     cursor: pointer;
-    border-radius: 4px;
+    border-radius: 0.25em;
 
     &.active {
       color: rgb(102, 152, 255);
