--- a/src/components/WhiteBoard/components/AttributeSetter/common.less
+++ b/src/components/WhiteBoard/components/AttributeSetter/common.less
@@ -1,27 +1,30 @@
 .container {
   background: #fff;
-  border-radius: 8px;
+  border-radius: 0.5em;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  width: 48px;
-  padding: 12px 0;
+  width: 2.5em;
+  padding: 0.75em 0;
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 0.5em;
   align-items: center;
+
   .item {
     color: #999;
     fill: currentColor;
     cursor: pointer;
-    width: 36px;
-    height: 36px;
+    width: 1.5em;
+    height: 1.5em;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 4px;
+    border-radius: 0.25em;
+
     &:not(.active):hover {
       color: rgb(102, 152, 255);
       background: rgba(102, 152, 255, 0.1);
     }
+
     &.active {
       color: rgb(102, 152, 255);
       background: rgba(102, 152, 255, 0.1);
