--- a/src/components/WhiteBoard/components/Toolbar/Geometry/index.module.less
+++ b/src/components/WhiteBoard/components/Toolbar/Geometry/index.module.less
@@ -1,19 +1,22 @@
 .popoverContainer {
-  max-width: 200px;
-  max-height: 200px;
+  max-width: 12.5em;
+  max-height: 12.5em;
   overflow: auto;
+
   .list {
     display: flex;
     flex-wrap: wrap;
+
     .item {
-      width: 32px;
-      height: 32px;
+      width: 1.5em;
+      height: 1.5em;
       display: flex;
       align-items: center;
       justify-content: center;
       cursor: pointer;
       color: #999;
-      border-radius: 4px;
+      border-radius: 0.25em;
+
       &:hover {
         background-color: #f0f0f0;
       }
