--- a/src/components/WhiteBoard/components/Toolbar/index.module.less
+++ b/src/components/WhiteBoard/components/Toolbar/index.module.less
@@ -1,30 +1,33 @@
 .toolBar {
   position: absolute;
-  top: 20px;
+  top: 1.25em;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
   align-items: center;
-  gap: 10px;
-  height: 48px;
+  gap: 0.625em;
+  height: 2.5em;
   background: #fff;
-  border-radius: 8px;
-  padding: 0 12px;
+  border-radius: 0.5em;
+  padding: 0 0.75em;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
   .toolBarItem {
     color: #999;
     fill: currentColor;
     cursor: pointer;
-    width: 36px;
-    height: 36px;
+    width: 1.5em;
+    height: 1.5em;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 4px;
+    border-radius: 0.25em;
+
     &:not(.active):hover {
       color: rgb(102, 152, 255);
       background: rgba(102, 152, 255, 0.1);
     }
+
     &.active {
       color: rgb(102, 152, 255);
       background: rgba(102, 152, 255, 0.1);
